--- a/index.html
+++ b/index.html
@@ -1,58 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Premium Pink Scratch Lotto</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800;900&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Inter', sans-serif;
-        background-color: #fff1f2;
-        color: #881337;
-        min-height: 100vh;
-        overflow: hidden;
-      }
-      .font-outfit {
-        font-family: 'Outfit', sans-serif;
-      }
-      .glass {
-        background: rgba(255, 255, 255, 0.7);
-        backdrop-filter: blur(16px);
-        -webkit-backdrop-filter: blur(16px);
-        border: 1px solid rgba(251, 113, 133, 0.2);
-      }
-      .custom-scrollbar::-webkit-scrollbar {
-        width: 6px;
-      }
-      .custom-scrollbar::-webkit-scrollbar-thumb {
-        background: #fbcfe8;
-        border-radius: 10px;
-      }
-      @keyframes float {
-        0%, 100% { transform: translateY(0); }
-        50% { transform: translateY(-10px); }
-      }
-      .animate-float {
-        animation: float 4s ease-in-out infinite;
-      }
-    </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
-  }
-}
-</script>
-</head>
-  <body>
-    <div id="root"></div>
-  </body>
-</html>
+
+<html> <head> <meta charset="UTF-8"> <title>Pink Lotto</title> <script src=""></script> <script type="importmap">{"imports":{"react":"","react-dom":""}}</script> </head> <body class="bg-rose-50 flex flex-col items-center justify-center h-screen m-0 font-sans"> <div id="root"></div> <script type="module"> import React,{useState,useEffect,useRef} from 'react'; import ReactDOM from 'react-dom';
+
+</body> </html>
